@@ -28,6 +28,8 @@
 
 #include "output.h"
 
+#include <hurd/wortel.h>
+
 
 /* True if debugging is enabled.  */
 int output_debug;
@@ -38,22 +40,7 @@ void
 __attribute__((__noreturn__))
 shutdown (void)
 {
-  l4_msg_t msg;
-
-  l4_msg_clear (msg);
-  /* FIXME: Hard coded message label.  */
-#define WORTEL_MSG_SHUTDOWN 2
-  l4_set_msg_label (msg, WORTEL_MSG_SHUTDOWN);
-
-  /* FIXME: This should be our cap ID.  */
-  l4_msg_append_word (msg, 0);
-
-  /* This is some yet unspecified specifier.  */
-  l4_msg_append_word (msg, 0);
-
-  l4_msg_load (msg);
-  /* FIXME: Hard coded thread ID.  */
-  l4_send (l4_global_id (l4_thread_user_base () + 2, 1));
+  wortel_shutdown ();
 
   while (1)
     l4_sleep (L4_NEVER);
@@ -66,19 +53,7 @@ shutdown (void)
 int
 putchar (int chr)
 {
-  l4_msg_t msg;
-
-  l4_msg_clear (msg);
-  /* FIXME: Hard coded message label.  */
-#define WORTEL_MSG_PUTCHAR 1
-  l4_set_msg_label (msg, WORTEL_MSG_PUTCHAR);
-  /* FIXME: This should be our cap ID.  */
-  l4_msg_append_word (msg, 0);
-  l4_msg_append_word (msg, (l4_word_t) chr);
-  l4_msg_load (msg);
-  /* FIXME: Hard coded thread ID.  */
-  l4_send (l4_global_id (l4_thread_user_base () + 2, 1));
-  /* FIXME: No error handling.  */
+  wortel_putchar (chr);
 
   return 0;
 }
